[package]
name = "node-bindgen-demo"
version = "0.1.0"
authors = ["jiayuxin <13520723393@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node-bindgen = {version= "4.0"}
#flv-future-aio= "1.1.0"

[build-dependencies]
node-bindgen = {version= "4.0",features = ["build"]}

[lib]
crate-type=["cdylib"]